--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,19 +1,30 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+ 
+  align-items: center;
+  justify-content:space-between; 
 }
 
 .logo {
+
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  margin: 0;
+  padding: 0;
+
 }
 
 a {
@@ -22,4 +33,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+ 
 }
