--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  
 }
 
 img {
@@ -10,8 +11,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
-
+.container{
+  display: flex;
+  justify-content: center;
+ gap:52px;
+  
+}
+.column{
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  align-items: center;
+}
+.text{
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
