--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,45 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header, .footer{
+  display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+ul{
+  list-style: none;
+ margin: 0;
+ padding: 0;
+}
+a{
+  color: black;
+  text-decoration: none;
+}
+.left-links, .right-links
+{
+  display: flex;
+  gap: 20px;
+}
+
+.content
+{
+  display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
 }
 
 img {
   width: 600px;
+}
+
+.footer{
+  background: #eee;
 }
 
 button {
